--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.17.1",
     "express": "^4.16.2",
     "history": "^4.7.2",
     "http-proxy-middleware": "^0.17.4",
@@ -18,7 +19,8 @@
   },
   "scripts": {
     "dev": "webpack-dev-server",
-    "build": "NODE_ENV=production webpack"
+    "build": "NODE_ENV=production webpack",
+    "e2e": "nightwatch"
   },
   "proxy": {
     "/api": {
@@ -42,6 +44,16 @@
     "style-loader": "^0.19.1",
     "uglifyjs-webpack-plugin": "^1.1.6",
     "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.7"
+    "webpack-dev-server": "^2.9.7",
+    "babel-jest": "^22.2.0",
+    "babel-preset-env": "^1.6.1",
+    "enzyme": "^3.3.0",
+    "enzyme-to-json": "^3.3.0",
+    "expect": "^22.0.3",
+    "jest-jasmine2": "^22.1.4",
+    "jest": "^22.1.4",
+    "nightwatch": "^0.9.19",
+    "nock": "^9.1.5",
+    "react-test-renderer": "^16.2.0"
   }
 }
