--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.2.2",
     "axios": "^0.17.1",
     "express": "^4.16.2",
     "history": "^4.7.2",
@@ -32,28 +33,29 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-jest": "^22.2.0",
     "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.17",
-    "css-loader": "^0.28.8",
+    "css-loader": "^0.28.10",
+    "enzyme": "^3.3.0",
+    "enzyme-to-json": "^3.3.0",
+    "expect": "^22.0.3",
     "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^2.30.1",
     "image-webpack-loader": "^3.4.2",
+    "jest": "^22.1.4",
+    "jest-jasmine2": "^22.1.4",
+    "nightwatch": "^0.9.19",
+    "nock": "^9.1.5",
+    "node-sass": "^4.7.2",
+    "react-test-renderer": "^16.2.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
     "uglifyjs-webpack-plugin": "^1.1.6",
     "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.7",
-    "babel-jest": "^22.2.0",
-    "babel-preset-env": "^1.6.1",
-    "enzyme": "^3.3.0",
-    "enzyme-to-json": "^3.3.0",
-    "expect": "^22.0.3",
-    "jest-jasmine2": "^22.1.4",
-    "jest": "^22.1.4",
-    "nightwatch": "^0.9.19",
-    "nock": "^9.1.5",
-    "react-test-renderer": "^16.2.0"
+    "webpack-dev-server": "^2.9.7"
   }
 }
