--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.10",
+    "dart-sass": "^1.0.0-beta.5.2",
+    "dart-sass-loader": "^1.0.0",
     "enzyme": "^3.3.0",
     "enzyme-to-json": "^3.3.0",
     "expect": "^22.0.3",
@@ -50,12 +52,11 @@
     "jest-jasmine2": "^22.1.4",
     "nightwatch": "^0.9.19",
     "nock": "^9.1.5",
-    "node-sass": "^4.7.2",
     "react-test-renderer": "^16.2.0",
-    "sass-loader": "^6.0.6",
+    "sass": "^1.0.0-beta.5.2",
     "style-loader": "^0.19.1",
     "uglifyjs-webpack-plugin": "^1.1.6",
     "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.7"
+    "webpack-dev-server": "^2.11.2"
   }
 }
