--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.16.2",
     "history": "^4.7.2",
     "http-proxy-middleware": "^0.17.4",
+    "prettier": "^1.10.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
@@ -35,9 +36,11 @@
     "babel-core": "^6.26.0",
     "babel-jest": "^22.2.0",
     "babel-loader": "^7.1.2",
+    "babel-polyfill": "^6.0.16",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.0.15",
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.10",
     "dart-sass": "^1.0.0-beta.5.2",
